# icu4oorexx

./: .gitattributes  .gitignore  README.md  _diary.txt
examples/: GNUmakefile  Makefile  charnames-out-ref.txt  charnames.rex
src/: CMakeLists.txt  ICU4ooRexx.cls  ICU4ooRexx.cpp  ICU4ooRexx.def  config.h.in.cmake
